--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,14 +1,12 @@
 {% extends "base.html" %}
-{% block title %}Home{% endblock %}
+
+{% block title %}Music List{% endblock %}
+
 {% block content %}
-<h1>Welcome to My Music Platform</h1>
-{% for song in songs %}
-  <div>
-    <h2>{{ song.title }}</h2>
-    <audio controls>
-      <source src="{{ url_for('static', filename='music/' ~ song.title) }}" type="audio/mpeg">
-      Your browser does not support the audio element.
-    </audio>
-  </div>
-{% endfor %}
+  <h1>Your Music</h1>
+  <ul>
+    {% for music in music_list %}
+      <li>{{ music.title }} - <a href="{{ url_for('static', filename='music/' ~ music.filename) }}">Play</a></li>
+    {% endfor %}
+  </ul>
 {% endblock %}
