--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,25 +1,19 @@
 {% extends "base.html" %}
+
 {% block title %}Login{% endblock %}
+
 {% block content %}
-<h2>Login</h2>
-<form method="POST" action="{{ url_for('login') }}">
-  {{ form.hidden_tag() }}
-  <div>
-    {{ form.email.label }}<br>
-    {{ form.email(size=32) }}<br>
-    {% for error in form.email.errors %}
-      <span style="color: red;">[{{ error }}]</span>
-    {% endfor %}
-  </div>
-  <div>
-    {{ form.password.label }}<br>
-    {{ form.password(size=32) }}<br>
-    {% for error in form.password.errors %}
-      <span style="color: red;">[{{ error }}]</span>
-    {% endfor %}
-  </div>
-  <div>
-    {{ form.submit() }}
-  </div>
-</form>
+  <h1>Login</h1>
+  <form method="POST">
+    {{ form.hidden_tag() }}
+    <p>
+      {{ form.username.label }}<br>
+      {{ form.username(size=32) }}
+    </p>
+    <p>
+      {{ form.password.label }}<br>
+      {{ form.password(size=32) }}
+    </p>
+    <p>{{ form.submit() }}</p>
+  </form>
 {% endblock %}
