--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
-{% block title %}Upload{% endblock %}
+
+{% block title %}Upload Music{% endblock %}
+
 {% block content %}
-<h1>Upload Your Music</h1>
-<form method="POST" action="{{ url_for('upload') }}" enctype="multipart/form-data">
-    {{ form.hidden_tag() }}
-    <div>
-        {{ form.file.label }}<br>
-        {{ form.file(size=32) }}<br>
-        {% for error in form.file.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </div>
-    <div>
-        {{ form.submit() }}
-    </div>
-</form>
+  <h1>Upload Music</h1>
+  <form method="POST" enctype="multipart/form-data">
+    <p>
+      <label for="title">Title:</label><br>
+      <input type="text" name="title" id="title" required>
+    </p>
+    <p>
+      <label for="file">File:</label><br>
+      <input type="file" name="file" id="file" required>
+    </p>
+    <p><input type="submit" value="Upload"></p>
+  </form>
 {% endblock %}
